# turning-machine-operating-system

./: .gitignore  BOOTSTRAP_PROMPT.md  CONTRIBUTING.md  CURSOR.md  Dockerfile.dev  LICENSE  MASTER.md  Makefile  README.md  rust-toolchain.toml
.cursor/: progress.md  remember.md  rules.mdc  spec.md
dispatch-queue/: DISPATCH_BUILD_001.md  DISPATCH_CTRL_001.md  DISPATCH_DEVICE_001.md  DISPATCH_DEVICE_002.md  DISPATCH_DISPLAY_001.md  DISPATCH_HEAD_001.md  DISPATCH_PROC_001.md  DISPATCH_SHELL_001.md  DISPATCH_STORE_001.md  DISPATCH_TAPE_001.md  DISPATCH_TRANS_001.md
docs/: AGENT_WORKFLOW.md  CONTEXT_PROTOCOL.md  ITERATIONS.md  MISTAKES.md  START_HERE.md  TASK_DISPATCH.md
docs/agents/: BUILD.md  CTRL.md  DEVICE.md  DISPLAY.md  HEAD.md  (+6 more)
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: main.rs  test_dispatch.rs
kernel/src/ctrl/: mod.rs  scheduler.rs  state.rs  transition.rs
kernel/src/device/: ata.rs  keyboard.rs  mod.rs  pic.rs  pit.rs
kernel/src/display/: mod.rs  vga.rs
kernel/src/head/: boot.asm  gdt.rs  idt.rs  memmap.rs  mod.rs  serial.rs
kernel/src/proc/: context.rs  mod.rs  tcb.rs
kernel/src/store/: fat12.rs  mod.rs
kernel/src/tape/: allocator.rs  heap.rs  mod.rs  regions.rs
kernel/src/trans/: exceptions.rs  irq.rs  mod.rs  syscall.rs
scripts/: docker_smoke.sh  setup_venv.sh  smoke.sh
tests/: run_tests.sh  testfw.h
tools/: c_smoke_tests.py  cc_driver.c  context_compressor.py  dispatch_generator.py  make_fat12.sh  mkdisk.c  requirements.txt  setup_venv.sh  test_runner.py
userspace/: Makefile
viz/: tape_bridge.py  visualizer.py
(+62 files in other folders)
