[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# no_std kernel — no standard library
[lib]
# We use a binary crate (no lib), entry is in main.rs via _start

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
spin = "0.9"       # Spinlock — works without OS (single core is fine)
bitflags = "2"     # Bit manipulation for flags registers, page flags

# Optional: port I/O helpers for x86
# Uncomment if you want type-safe port I/O wrappers:
# x86 = { version = "0.52", default-features = false }

[profile.dev]
panic = "abort"   # No stack unwinding in kernel — REQUIRED
opt-level = 1     # Some optimization avoids stack overflow issues in debug

[profile.release]
panic = "abort"   # REQUIRED
opt-level = 2
lto = true
codegen-units = 1
